# blackmatter-symbiont

./: .gitignore  1.color_cube.fs  1.model_loading.fs  2.2.light_cube.vs  CMakeLists.txt  Makefile  PFS.side  README.md  camera.h  fragment.glsl  main.bkp  main.cpp  model_material_light.fs  model_texture_light.fs  model_texture_light.vs  shader.cpp  shader.h  texture.cpp  texture.h  triangle.cpp  vertex.glsl
benny/: display.cpp  display.h  main.cpp
cherno/: Makefile  README.md  main-old-school-way.cpp  main-square.cpp  main-triangle-shader.cpp  main.cpp
cherno/res/shaders/: basic.shader
include/: camera.h  colors.h  filesystem.h  mesh.h  model.h  shader_m.h
material/: material.cpp
resources/objects/shield-sphere/: scene.gltf
resources/objects/sphere-curve/: license.txt  scene.gltf
resources/objects/voronoi-sphere/: license.txt  scene.gltf
samples/: README.md
shaders/: 2.2.basic_lighting.fs
